Add card interaction, keyboard focus, and title fix

--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Brittany-style Portfolio{% endblock %}
+{% block title %}Portfolio{% endblock %}
 
 {% block content %}
 <a class="skip-link" href="#content">Skip to Content</a>
