Production settings, security, static files, image optimization

--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -87,7 +87,16 @@
       {% for p in projects %}
       <article class="card-row card-link">
         <div class="thumb">
-          <img src="{% static p.thumb %}" alt="{{ p.thumb_alt }}">
+          <picture>
+            <source srcset="{% static p.thumb_webp %}" type="image/webp">
+            <img
+              src="{% static p.thumb %}"
+              alt="{{ p.thumb_alt }}"
+              width="180" height="96"
+              loading="lazy"
+              decoding="async"
+            >
+          </picture>
         </div>
 
         <div class="card-right">
@@ -117,7 +126,17 @@
 
       {% for w in writing %}
       <div class="writing-row">
-        <img class="writing-thumb" src="{% static w.thumb %}" alt="Article thumbnail">
+        <picture>
+          <source srcset="{% static w.thumb_webp %}" type="image/webp">
+          <img
+            class="writing-thumb"
+            src="{% static w.thumb %}"
+            alt="Article thumbnail"
+            width="144" height="81"
+            loading="lazy"
+            decoding="async"
+          >
+        </picture>
         <div class="writing-text">
           <div class="writing-year">{{ w.year }}</div>
           <a class="card-title" href="{{ w.url }}" target="_blank" rel="noreferrer noopener">
