--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -25,6 +25,9 @@
         <a class="nav-item" href="#projects" data-target="projects">
           <span class="nav-line"></span><span class="nav-label">PROJECTS</span>
         </a>
+        <a class="nav-item" href="#writing" data-target="writing">
+          <span class="nav-line"></span><span class="nav-label">WRITING</span>
+        </a>
       </nav>
 
       <div class="social">
@@ -120,7 +123,6 @@
       </div>
     </section>
 
-    {% load static %}
     <section id="writing" class="section">
       <h2 class="section-title">Writing</h2>
 
